# HxDGraal

./: .gitignore  CMakeLists.txt
include/: DataInspectorPluginInterface.h  DataInspectorPluginServer.h  DataInspectorShared.h  GByte5aConverter.h  GByteConverter.h  GDESConverter.h  GModTimeConverter.h  GPixelCoordConverter.h  GTileCoordConverter.h
src/: CMakeLists.txt  DataInspectorPluginServer.cpp  HxDGraal.def  dllmain.cpp
